ReWrite LocalDate to String to work marshaling