@@ -1,3 +1,16 @@
+addr
+===
+
+Пример программы [по учебнику](https://code.makery.ch/ru/library/javafx-tutorial/) Учебник писался давно, 
+поэтому к текущему моменту - 2025-й год кое что не работает. Работа с XML перекочевала в Java-EE 
+поэтому в **pom.xml** нужно подключать зависимости **Jakarta**
+
+Класс **LocalDate** не хочет корректно сохраняться в XML точнее вообще не сохраняется. 
+Надо переписать на просто строку?
+
+Переписал дату рождения в **Person** на простую строку...
+
+
 Компиляция
 ===
 
@@ -6,7 +19,8 @@ mvn clean
 mvn compile
 ```
 
-Соберем полностью готовое приложение к распространению
+Соберем полностью готовое приложение к распространению. Собралось все в архив, 
+но работать с файлами отказывается... Не хватает каких то зависимостей.
 
 ```shell
 mvn javafx:jlink
@@ -57,41 +71,19 @@ alexey@honor:~/jsrc/TeezD$ java --module-path $FX --add-modules javafx.controls,
 alexey@honor:~/jsrc/TeezD$ java -p $FX --add-modules ALL-MODULE-PATH -jar target/TeezD-1.jar
 ```
 
-Подключение jaxb-api
----
-
-```
-<dependency>
-    <groupId>javax.xml.bind</groupId>
-    <artifactId>jaxb-api</artifactId>
-    <version>2.3.1</version>
-</dependency>
-```
-
-После подключения в **pom.xml** получаем ошибку отсутствия библиотек при запуске из командной строки
+После подключения в **pom.xml** нужных библиотек их можно добавить в каталог **/home/alexey/jlib/xml**:
 
 ```shell
-alexey@honor:~/jsrc/addr$ java -p $FX:target/classes --add-modules ALL-MODULE-PATH -m fx/fx.Main
-```
-
-Можно добавить эти библиотеки в путь **$FX**
-
-```shell
-alexey@honor:~/jsrc/addr$ ll ~/jfx/*api*
--rw-rw-r-- 1 alexey  56K окт 19 12:03 /home/alexey/jfx/javax.activation-api-1.2.0.jar
--rw-rw-r-- 1 alexey 126K окт 19 12:03 /home/alexey/jfx/jaxb-api-2.3.1.jar
-```
-
-Можно создать специально для этих библиотек отдельный каталог **/home/alexey/jlib/xml** 
-положить туда нужные библиотеки
-
-```shell
-alexey@honor:~/jsrc/addr$ ll ~/jlib/xml/
-итого 192K
-drwxrwxr-x 2 alexey 4,0K окт 19 12:56 ./
+alexey@honor:~/jsrc/addr$ ll /home/alexey/jlib/xml/
+итого 1,4M
+drwxrwxr-x 2 alexey 4,0K окт 20 20:18 ./
 drwxrwxr-x 3 alexey 4,0K окт 19 12:48 ../
--rw-rw-r-- 1 alexey  56K окт 19 12:03 javax.activation-api-1.2.0.jar
--rw-rw-r-- 1 alexey 126K окт 19 12:03 jaxb-api-2.3.1.jar
+-rw-rw-r-- 1 alexey  26K мар 28  2022 istack-commons-runtime-4.1.1.jar
+-rw-rw-r-- 1 alexey  62K дек  2  2021 jakarta.activation-api-2.1.0.jar
+-rw-rw-r-- 1 alexey 125K окт 19 19:14 jakarta.xml.bind-api-4.0.0.jar
+-rw-rw-r-- 1 alexey 138K мая 20  2022 jaxb-core-4.0.0.jar
+-rw-rw-r-- 1 alexey 897K мая 20  2022 jaxb-runtime-4.0.0.jar
+-rw-rw-r-- 1 alexey  73K мая 20  2022 txw2-4.0.0.jar
 ```
 
 Запускать командой с указанием пути к библиотекам:
